# zooplankton

./: .gitignore  Presentation Zooplankton.key  README.md  pyproject.toml
model/: model.py
notebooks/: CNN-RNN.ipynb  eda.ipynb  helpers.py  pre_process_data.ipynb  tuned_model.ipynb
